# conclaw

./: .env.example  .gitignore  PRD.md  approach_comparison.md  docker-compose.yml  environment_CLI_level.md  learning_roadmap.md  plan.md  pyproject.toml  track.md
src/conclaw/: __main__.py  agent.py  cli.py  config.py  db.py  fs_ops.py  memory.py
src/conclaw/backend/: db.py  decision.py  fs_ops.py  memory.py  safety.py  tools.py
src/conclaw/cli/: app.py
src/conclaw/cli/components/: header.py  output_area.py
src/conclaw/cli/themes/: dark.py  light.py
src/conclaw/commands/: builtins.py  registry.py
src/conclaw/config/: defaults.py  loader.py
src/conclaw/llm/: client.py  prompts.py
src/conclaw/session/: manager.py
src/conclaw/storage/: auto_memory.py  context_loader.py  conversation.py  memory_tool.py  paths.py
