[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conclaw"
version = "0.1.0"
description = "CLI with local PostgreSQL-backed memory, GPT-driven decisions, and filesystem controls."
requires-python = ">=3.10"
dependencies = [
  "psycopg[binary]>=3.2",
  "openai>=1.52.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
conclaw = "conclaw.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
